Fix pre-animation visibility bug of intro section

--- a/timeline/app/src/css/main.css
+++ b/timeline/app/src/css/main.css
@@ -203,6 +203,7 @@ h2 {
     animation-fill-mode: forwards;
     -webkit-animation-delay: 0.1s;
     animation-delay: 0.1s;
+    opacity: 0;
   }
 
   .load-animate:nth-child(2) {
@@ -214,6 +215,7 @@ h2 {
     animation-fill-mode: forwards;
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s;
+    opacity: 0;
   }
 
   .load-animate:nth-child(3) {
@@ -225,6 +227,7 @@ h2 {
     animation-fill-mode: forwards;
     -webkit-animation-delay: 0.3s;
     animation-delay: 0.3s;
+    opacity: 0;
   }
 
   .load-animate:nth-child(4) {
@@ -236,6 +239,7 @@ h2 {
     animation-fill-mode: forwards;
     -webkit-animation-delay: 0.4s;
     animation-delay: 0.4s;
+    opacity: 0;
   }
 
   .load-animate:nth-child(5) {
@@ -247,6 +251,7 @@ h2 {
     animation-fill-mode: forwards;
     -webkit-animation-delay: 0.5s;
     animation-delay: 0.5s;
+    opacity: 0;
   }
 }
 
